2008-06-26  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.1 and 1.0.2.
	* VERSION: change version to 1.0.2.
	* Makefile: add targets 'gem' and 'binary_gem' to make pure ruby
	   and binary gems.
	* ruby-oci8.spec: rename to ruby-oci8.spec.in.
	* ruby-oci8.spec.in: rename from ruby-oci8.spec and set version
	   string from 'VERSION' file.
	* ruby-oci8.gemspec: added.
	* dist-files: add files to ruby-oci8 source packages for gemspec.
	* test/test_clob.rb: fix to pass tests in a deep directory.

2008-06-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/handle.c: fix a segv bug in gc mark. (Thanks to authorNari)
	* ext/oci8/oraconf.rb: fix for windows Oracle 11g instant client.
	* test/config.rb, test/test_bind_raw.rb, test/test_bind_time.rb,
	  test/test_break.rb, test/test_clob.rb, test/test_connstr.rb,
	  test/test_dbi.rb, test/test_dbi_clob.rb, test/test_describe.rb,
	  test/test_metadata.rb, test/test_oci8.rb, test/test_oradate.rb,
	  test/test_oranumber.rb:
	    fix to run tests in directories outside of 'test' directory.

2008-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.0 and 1.0.1.
	* VERSION: update to 1.0.1.
	* ext/oci8/extconf.rb: raise error if the ruby is 1.9.
	* ext/oci8/oraconf.rb: fix for intel mac instant client.

2008-04-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add error messages for the beta
	    version of intel mac oracle instant client. But the production
	    version may not need this.
	* lib/oci8.rb.in: change the spec of OCI8#exec and OCI8::Cursor#exec.
	    Before this change, the number of rows had been returned
	    only when the SQL statement is update, delete or insert
	    statement. After this, it is returned when the SQL statement
	    is not select statement. For example OCI8#exec had returned
	    true for MERGE statement (pointed by Jim Cain). But now it is
	    the number of rows processed.
	* ext/oci8/oradate.c, ext/oci8/oranumber.c: fix some (not all) warnings