@@ -1,3 +1,7 @@
+2008-07-05  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oraconf.rb: prints more information on checking
+	   LD_LIBRARY_PATH.
+
 2008-06-26  KUBO Takehiro  <kubo@jiubao.org>
 	* NEWS: add changes between 1.0.1 and 1.0.2.
 	* VERSION: change version to 1.0.2.
